[package]
name = "v-common-api"
version = "0.1.12"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"
description = "common part of the veda platform"
license     = "MIT"

[lib]
path = "src/api_client.rs"

[dependencies]
serde = "1.0.118"
serde_json = "1.0"
nng = "0.5.1"
log = "0.4"
nanoid = "0.3.0"

v_onto = { package = "v-common-onto", version = "=0.1.10" }
